# MyPharm-server

./: .gitignore  pyproject.toml
api/auth/: serializers.py  urls.py
api/v1/: urls.py
api/v1/company/: serializers.py  views.py
api/v1/medicine/: serializers.py  views.py
api/v1/user/: serializers.py  views.py
api/version_1/: urls.py
apps/company/: admin.py  models.py
apps/medicine/: admin.py  models.py
apps/user/: admin.py  managers.py  models.py  serializers.py
common/: constans.py  upload_to_file.py  validators.py
config/: celery.py  settings.py  urls.py  yasg.py
config/config_deploy/: gunicorn.conf.py  my_pharm.conf
config/deploy/: celery_worker.conf  my_pharm.conf
templates/sends_email/: password_reset_mail.html
workers/: __init__.py
workers/user/: tasks.py
